<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pizza Ordering</string>
    <string name="action_settings">Settings</string>
    <string name="pizza_size">Pizza Size</string>
    <string name="small_price">Small \n$8</string>
    <string name="medium_price">Medium \n$10</string>
    <string name="large_price">Large \n$12</string>
    <string name="toppings">Toppings</string>
    <string name="topping_cheese">Cheese</string>
    <string name="topping_bacon">Bacon</string>
    <string name="topping_pepperoni">Pepperoni</string>
    <string name="topping_sausage">Sausage</string>
    <string name="topping_green_pepper">Green Pepper</string>
    <string name="payment">Payment</string>
    <string name="payment_accepted">Payment accepted.</string>
    <string name="payment_not_accepted">Payment not accepted!</string>
    <string name="title_activity_payment">Payment Information</string>
    <string name="hello_world">Hello world!</string>
    <string name="pay_now">Pay now!</string>
    <string name="total_price">Total Price with HST: $</string>
    <string name="pizza_with">pizza with...</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash">Cash</string>
    <string name="small_size">Small</string>
    <string name="medium_size">Medium</string>
    <string name="large_size">Large</string>
    <string name="new_order">New Order</string>
    <string name="total_is">Total is $</string>
    <string name="inc_HST">inc. HST</string>

</resources>