<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/pizza_size" />

    
    
    
    <CheckBox
        android:id="@+id/chkCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping_cheese" />
 
    <CheckBox
        android:id="@+id/chkPeperoni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping_pepperoni" />
    
    <CheckBox
        android:id="@+id/chkSausage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping_sausage" />
    
    <CheckBox
        android:id="@+id/chkBacon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping_bacon" />
    
    <CheckBox
        android:id="@+id/chkPepper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping_green_pepper" />
    
</LinearLayout>
